--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,1 +1,15 @@
-<h1>Esté é o Home</h1>
+<div class="container" style="width: 90%;">
+  <div class="card m-3 p-3">
+    <h2 class="text-center">Atendimento Virtual</h2>
+    <p class="text-justify">Nossos atendimentos sobre duvidas dos produtos podem ser discutidos a partir do seguinte contato: (67) 9950-12348.</p>
+  </div>
+  <div class="card m-3 p-3">
+    <h2 class="text-center">Computadores Modernos</h2>
+    <p class="text-justify">Vendemos computadores do periodo de 2019 à 2022, garantindo que o consumidor tenha o melhor produto para seu uso.</p>
+  </div>
+  <div class="card m-3 p-3">
+    <h2 class="text-center">Componentes da maior qualidade</h2>
+    <p class="text-justify">Buscamos sempre trazer os melhores componentes para o seu computador com o preço cabivel para todos os publicos, seja para uso pessoal ou profissional.</p>
+  </div>
+
+</div>
