--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,26 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tech PC: Pagina Inicial</title>
+    <title>Tech PC</title>
 </head>
 <body style="background-color:rgb(139, 139, 139);">
     <!--inicio do menu-->
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #043b63;">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Tech PC</a>
+          <a class="navbar-brand" href="/">Tech PC</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./pages/formulario.html">Formulario</a>
+                <a class="nav-link" href="/formulario">Formulario</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -38,7 +38,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./pages/sobre.html">Sobre</a>
+                <a class="nav-link" href="/sobre">Sobre</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
