adicionado telas de exibir, editar e a pagina inicial do site

--- a/views/editar_users.hbs
+++ b/views/editar_users.hbs
@@ -1,6 +1,6 @@
 <div class="container p-2">
   <div class="card p-4 m-3">
-    <h1 class="text-center">Cadastrar Usuário</h1>
+    <h1 class="text-center">Editar Usuário</h1>
     <form>
         <div class="form-group">
             <label for="exampleInputEmail1">Nome de usuário</label>
@@ -18,7 +18,7 @@
               Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
             </div>
         </div>
-        <button type="submit" class="btn btn-success mt-3">Enviar</button>
+        <button type="submit" class="btn btn-warning mt-3">Salvar Alterações</button>
       </form>
     </div>
     </div>
