--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -19,26 +19,21 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
+                <a class="nav-link" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/formulario">Formulario</a>
+                <a class="nav-link" href="/cad_users">Login</a>
               </li>
-              <li class="nav-item dropdown">
+              <li class="nav-item">
+                <a class="nav-link" href="/editar_users">Editar conta</a>
+              </li>
+               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Componentes a venda
+                  Gestão
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="./pages/placa_mae.html">Placa mãe</a></li>
-                  <li><a class="dropdown-item" href="./pages/ram.html">Memoria RAM</a></li>
-                  <li><a class="dropdown-item" href="./pages/hd_ssd.html">Memoria interna HD/SSD</a></li>
-                  <li><a class="dropdown-item" href="./pages/teclado_mouse.html">Teclado e Mouse</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="./pages/gabinetes_prontos.html">Gabinetes prontos</a></li>
+                  <li><a class="dropdown-item" href="/exibir_users">Exibir usuários</a></li>
                 </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/sobre">Sobre</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
