--- a/views/formulario.hbs
+++ b/views/formulario.hbs
@@ -1,19 +1,19 @@
 <div class="container p-2">
   <div class="card p-4 m-3">
     <h1 class="text-center">Cadastrar Usuário</h1>
-    <form>
+    <form action="/insert_users" method="POST">
         <div class="form-group">
             <label for="exampleInputEmail1">Nome de usuário</label>
-            <input type="text" class="form-control" placeholder="Digite o seu nome" id="nome">
+            <input type="text" class="form-control" placeholder="Digite o seu nome" id="nome" name="nome">
           </div>
         <div class="form-group mt-2">
           <label for="exampleInputEmail1">Endereço de email</label>
-          <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Digite seu email">
+          <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelp" placeholder="Digite seu email">
           <small id="emailHelp" class="form-text text-muted">Nunca vamos compartilhar seu email, com ninguém.</small>
         </div>
         <div class="form-group">
             <label for="inputPassword5" class="form-label">Password</label>
-            <input type="password" id="senha" class="form-control" aria-describedby="passwordHelpBlock">
+            <input type="password" name="senha" id="senha" class="form-control" aria-describedby="passwordHelpBlock">
             <div id="passwordHelpBlock" class="form-text">
               Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
             </div>
