Modificado o menu da pagina

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -22,7 +22,7 @@
                 <a class="nav-link" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/cad_users">Login</a>
+                <a class="nav-link" href="/cad_users">Cadastro</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/editar_users">Editar conta</a>
