Adicionado paginas para os Produtos

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -22,7 +22,10 @@
                 <a class="nav-link" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/cad_users">Cadastro</a>
+                <a class="nav-link" href="/cad_users">Cadastro de Usuários</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/cad_produto">Cadastro de produtos</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/editar_users">Editar conta</a>
@@ -33,6 +36,7 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="/exibir_users">Exibir usuários</a></li>
+                  <li><a class="dropdown-item" href="/exibir_produto">Exibir produtos</a></li>
                 </ul>
               </li>
             </ul>
