modificado campo para o exibir_produtos

--- a/views/exibir_produto.hbs
+++ b/views/exibir_produto.hbs
@@ -7,7 +7,7 @@
             <tr>
                 <th class="text-center">#ID</th>
                 <th class="text-center">Nome</th>
-                <th class="text-center">preço</th>
+                <th class="text-center">Preço(R$)</th>
                 <th class="text-center">Imagem</th>
                 <th class="text-center">Ações</th>
             </tr>
