modificado o style da imagem do produto

--- a/views/exibir_produto.hbs
+++ b/views/exibir_produto.hbs
@@ -20,7 +20,7 @@
                 <td>{{nome_produto}}</td>
                 <td>{{preco}}</td>
                 <td>
-                    <img class="img-thumbnail" src="{{imagem}}">
+                    <img style="width: 150px; height: 120px;" src="{{imagem}}">
                 </td>
                 <td>
                     <form action="/editar_produto" method="post">
